# ALife

./: .gitignore  AGENTS.MD  Cargo.toml  LICENSE  README.md
.obsidian/: graph.json  workspace.json
docs/: GLOSSARY.md  PRINCIPLES.md  README.md  ROADMAP.md  STYLE_GUIDE.md
docs/.obsidian/: workspace.json
docs/biology/: action-process-registry.md  cell-state.md  cell.md  communication.md  division-partition.md  feasibility.md  genome.md  joint.md  lifecycle.md  membrane.md  organism.md  (+4 more)
src/: lib.rs  main.rs
tools/early-stability/: README.md  pyproject.toml
tools/early-stability/mechanisms/: phase1.toml
tools/early-stability/scenarios/: joint_upkeep_budget.toml  population_growth_bound.toml  single_cell_division_loop_estimate.toml  single_cell_dormancy.toml  single_cell_growth_budget.toml  single_cell_heat_death.toml  single_cell_heat_stress.toml  single_cell_over_capacity.toml  single_cell_starvation.toml  single_cell_survival.toml  single_cell_waste_death.toml  waste_heat_balance.toml
tools/early-stability/src/: cli.py  config_loader.py  micro_simulator.py  reachability.py  reachability_writer.py  report_writer.py  result_writer.py  static_calculator.py  tuner.py
tools/early-stability/tests/: helpers.py  test_cli.py  test_config_loader.py  test_micro_simulator.py  test_reachability.py  test_reachability_cli.py  test_reachability_writer.py  test_static_calculator.py  test_tuner.py  test_writers.py
tools/early-stability/tuning/: group1_energy.toml  group2_heat_waste.toml  group3_capacity.toml  group4_growth.toml  group5_joint.toml  single_cell.toml
(+118 files in other folders)
