[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "early-stability"
version = "0.1.0"
description = "Early Stability Tool for ALife Simulation"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.scripts]
early-stability = "cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = ["src"]

[tool.setuptools]
py-modules = [
    "cli",
    "config_loader",
    "micro_simulator",
    "report_writer",
    "result_writer",
    "static_calculator",
    "tuner",
]

[tool.setuptools.package-dir]
"" = "src"
